pkg/lang/syntax/testdata/ub/validate/invalid/factory/state-moves-cycle.ub
factory: {
  state-moves: [
    { from: 'core.thing@resource.a', to: 'core.thing@resource.b' },
    { from: 'core.thing@resource.b', to: 'core.thing@resource.a' },
  ]
}
